--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@
 /*hero*/
 .hero{
     background-color: #E9E9E9;
-    padding-top: 171px;
-    padding-bottom: 203px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 .hero-block {
     display: flex;
@@ -106,6 +106,30 @@
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px;
+}
+.slider_block {
+    display: none;
+}
+.slider_block--active {
+    display: block;
+}
+.services-arrows {
+    display: flex;
+    justify-content: space-between;
+    width: 100px;
+    margin: 15px auto;
+    margin-top: 50px;
+}
+.services__arrow {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+.services__arrow--left {
+    background: url(/img/left-arrow.svg)
+}
+.services__arrow--right {
+    background: url(/img/right-arrow.svg)
 }
 /*about*/
 .about {
@@ -201,8 +225,6 @@
     width: 25%;
     border-color: #10C9C3;
 }
-
-
 /*process*/
 .process-block {
     display: flex;
@@ -282,8 +304,6 @@
 .quote {
     background: url(/img/img/v880_1_1_.jpg) no-repeat center / cover;
     padding: 179px 0px;
-
-    
 }
 .quote-block {
     display: flex;
